# computer_arch

./: CMakeLists.txt  gcc.md  gdb.md  git.md  mac开发环境.md  问题.md
arm/: 01-导学.md  ATPCS.md  存储模式.md  寄存器.md  工作模式.md  开发版.md  异常机制.md  指令集.md
arm/code/: led.c  uart.c  uart_x86.c
arm/labs/: uart原理.md
arm/stm32/: a.txt  contex-M架构.md  gpio.md  定时器.md  链接脚本教程.md
basic/: compare_integer.c
link/: link_call_linear.c  link_call_shared.c  link_call_static.c  readme.md  symbol.sh
link/include/: vector.h
link/lib/: addvec.c  linear.c  multvec.c
linux/: 1.环境准备.md  2.系统启动过程.md  3.BootLoader(BIOS).md  3.BootLoader.md  4.内核与rootfs加载.md  5.linux系统启动初始化.md  prime.c  xags.c  杂项.md
linux/data/: bios_boot.x86.s
linux/driver/: 1.kernel_modules.md  10.中断.md  2.模块.md  3.设备.md  4.并发控制.md  5.io模型.md  6.内核定时器.md  7.内存管理.md  8.设备IO.md  9.设备树.md  a.txt  ftrace.md  io模型.md  tty设备.md  usb2.0.md  usb设备.md  内核定时器.md  模块.md  网络设备.md  设备.md
linux/lab/: 00-qemu-arm-环境准备.md  01-qemu-arm-uboot.md  02-qemu-arm-kernel.md  03-qemu-arm-rootfs.md  04-qemu-network.md  05-qemu-tftp-nfs.md  06-qemu-arm-注意事项.md  08-使用buildroot构建环境.md
linux/network/: tun虚拟设备.md  流量控制.md  网络层.md  虚拟网络.md  链路层.md
linux/qemu/: 00-qemu-arm-环境准备.md  01-qemu-arm-uboot.md  02-qemu-arm-kernel.md  04-qemu-network.md  05-qemu-tftp-nfs.md  07-android环境.md  entropy_init.sh
linux/test/: makefile
linux/交叉编译/: dig.md  ffmpeg.md  glibc.md  strace.md  (+2 more)
mips/: 寄存器.md
os/: ext2.c  filesystem.md  interrupt.md  lock_sleep.md  syscall.md  vm.md
qemu/: readme.md
risc-v/: risc-v_basic.md  sum.c  sum.s  tutorial.md  x.s
(+90 files in other folders)
